--- a/saie/.project
+++ b/saie/.project
@@ -24,94 +24,124 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>acegi-0.5.3.2-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>acegi-0.5.3.2-grails-app-controllers</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/controllers</locationURI>
+		</link>
+		<link>
+			<name>acegi-0.5.3.2-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>acegi-0.5.3.2-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>acegi-0.5.3.2-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>acegi-0.5.3.2-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/src/java</locationURI>
+		</link>
+		<link>
 			<name>burning-image-0.5.0-grails-app-controllers</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/controllers</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/controllers</locationURI>
 		</link>
 		<link>
 			<name>burning-image-0.5.0-grails-app-domain</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/domain</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/domain</locationURI>
 		</link>
 		<link>
 			<name>burning-image-0.5.0-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/i18n</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/i18n</locationURI>
 		</link>
 		<link>
 			<name>burning-image-0.5.0-grails-app-services</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/services</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/services</locationURI>
 		</link>
 		<link>
 			<name>burning-image-0.5.0-grails-app-taglib</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/taglib</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/taglib</locationURI>
 		</link>
 		<link>
 			<name>burning-image-0.5.0-src-groovy</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/src/groovy</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/src/groovy</locationURI>
 		</link>
 		<link>
 			<name>burning-image-0.5.0-src-java</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/burning-image-0.5.0/src/java</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/src/java</locationURI>
 		</link>
 		<link>
 			<name>jasper-1.2.2-grails-app-controllers</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/controllers</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/controllers</locationURI>
 		</link>
 		<link>
 			<name>jasper-1.2.2-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/i18n</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/i18n</locationURI>
 		</link>
 		<link>
 			<name>jasper-1.2.2-grails-app-services</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/services</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/services</locationURI>
 		</link>
 		<link>
 			<name>jasper-1.2.2-grails-app-taglib</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/taglib</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/taglib</locationURI>
 		</link>
 		<link>
 			<name>jasper-1.2.2-src-groovy</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/jasper-1.2.2/src/groovy</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/src/groovy</locationURI>
 		</link>
 		<link>
 			<name>log4j-xml-0.2-grails-app-conf</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/conf</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/conf</locationURI>
 		</link>
 		<link>
 			<name>log4j-xml-0.2-grails-app-controllers</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/controllers</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/controllers</locationURI>
 		</link>
 		<link>
 			<name>log4j-xml-0.2-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/i18n</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/i18n</locationURI>
 		</link>
 		<link>
 			<name>log4j-xml-0.2-grails-app-views</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/views</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/grails-app/views</locationURI>
 		</link>
 		<link>
 			<name>log4j-xml-0.2-src-groovy</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/log4j-xml-0.2/src/groovy</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/src/groovy</locationURI>
 		</link>
 		<link>
 			<name>tomcat-1.3.5-src-groovy</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/tomcat-1.3.5/src/groovy</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/tomcat-1.3.5/src/groovy</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
