--- a/saie/application.properties
+++ b/saie/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Thu Oct 13 17:22:09 ART 2011
+#Mon Nov 07 11:12:46 ART 2011
 app.grails.version=1.3.5
 app.name=saie
 app.servlet.version=2.4
 app.version=0.1
+plugins.acegi=0.5.3.2
 plugins.burning-image=0.5.0
 plugins.hibernate=1.3.5
 plugins.jasper=1.2.2
