--- a/saie/.project
+++ b/saie/.project
@@ -24,36 +24,6 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>acegi-0.5.3.2-grails-app-conf</name>
-			<type>2</type>
-			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/conf</locationURI>
-		</link>
-		<link>
-			<name>acegi-0.5.3.2-grails-app-controllers</name>
-			<type>2</type>
-			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/controllers</locationURI>
-		</link>
-		<link>
-			<name>acegi-0.5.3.2-grails-app-services</name>
-			<type>2</type>
-			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/services</locationURI>
-		</link>
-		<link>
-			<name>acegi-0.5.3.2-grails-app-taglib</name>
-			<type>2</type>
-			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/grails-app/taglib</locationURI>
-		</link>
-		<link>
-			<name>acegi-0.5.3.2-src-groovy</name>
-			<type>2</type>
-			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/src/groovy</locationURI>
-		</link>
-		<link>
-			<name>acegi-0.5.3.2-src-java</name>
-			<type>2</type>
-			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/acegi-0.5.3.2/src/java</locationURI>
-		</link>
-		<link>
 			<name>burning-image-0.5.0-grails-app-controllers</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/grails-app/controllers</locationURI>
@@ -137,6 +107,46 @@
 			<name>log4j-xml-0.2-src-groovy</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>release-1.0.0.RC3-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/release-1.0.0.RC3/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>release-1.0.0.RC3-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/release-1.0.0.RC3/src/java</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/java</locationURI>
 		</link>
 		<link>
 			<name>tomcat-1.3.5-src-groovy</name>
