--- a/saie/.project
+++ b/saie/.project
@@ -59,6 +59,26 @@
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/src/java</locationURI>
 		</link>
 		<link>
+			<name>famfamfam-1.0.1-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/famfamfam-1.0.1/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>greenmail-1.2.2-grails-app-controllers</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/greenmail-1.2.2/grails-app/controllers</locationURI>
+		</link>
+		<link>
+			<name>greenmail-1.2.2-grails-app-views</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/greenmail-1.2.2/grails-app/views</locationURI>
+		</link>
+		<link>
+			<name>greenmail-1.2.2-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/greenmail-1.2.2/src/groovy</locationURI>
+		</link>
+		<link>
 			<name>jasper-1.2.2-grails-app-controllers</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/controllers</locationURI>
@@ -82,6 +102,46 @@
 			<name>jasper-1.2.2-src-groovy</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>jquery-1.6.1.1-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>jquery-1.6.1.1-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>jquery-1.6.1.1-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>jquery-1.6.1.1-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-1.6.1.1/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>jquery-1.6.1.1-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-1.6.1.1/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>jquery-ui-1.8.15-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-ui-1.8.15/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>jquery-ui-1.8.15-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-ui-1.8.15/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>jquery-ui-1.8.15-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jquery-ui-1.8.15/grails-app/taglib</locationURI>
 		</link>
 		<link>
 			<name>log4j-xml-0.2-grails-app-conf</name>
@@ -109,34 +169,114 @@
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/src/groovy</locationURI>
 		</link>
 		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-views</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/views</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>release-1.0.0.M2-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/release-1.0.0.M2/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>release-1.0.0.M2-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/release-1.0.0.M2/src/java</locationURI>
+		</link>
+		<link>
 			<name>spring-security-core-1.2.4-grails-app-conf</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/conf</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/conf</locationURI>
 		</link>
 		<link>
 			<name>spring-security-core-1.2.4-grails-app-i18n</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/i18n</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/i18n</locationURI>
 		</link>
 		<link>
 			<name>spring-security-core-1.2.4-grails-app-services</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/services</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/services</locationURI>
 		</link>
 		<link>
 			<name>spring-security-core-1.2.4-grails-app-taglib</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/taglib</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/taglib</locationURI>
 		</link>
 		<link>
 			<name>spring-security-core-1.2.4-src-groovy</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/groovy</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/groovy</locationURI>
 		</link>
 		<link>
 			<name>spring-security-core-1.2.4-src-java</name>
 			<type>2</type>
-			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/java</location>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/java</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-controllers</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/controllers</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-domain</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/domain</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>spring-security-ui-0.1.2-grails-app-views</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-ui-0.1.2/grails-app/views</locationURI>
+		</link>
+		<link>
+			<name>svn-1.0.0.M1-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/svn-1.0.0.M1/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>svn-1.0.0.M1-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/svn-1.0.0.M1/src/groovy</locationURI>
 		</link>
 		<link>
 			<name>tomcat-1.3.5-src-groovy</name>
