--- a/saie/application.properties
+++ b/saie/application.properties
@@ -1,12 +1,14 @@
 #Grails Metadata file
-#Mon Nov 07 14:36:47 ART 2011
+#Tue Nov 08 15:10:55 ART 2011
 app.grails.version=1.3.5
 app.name=saie
 app.servlet.version=2.4
 app.version=0.1
 plugins.burning-image=0.5.0
+plugins.famfamfam=1.0.1
 plugins.hibernate=1.3.5
 plugins.jasper=1.2.2
 plugins.log4j-xml=0.2
-plugins.spring-security-core=1.2.4
+plugins.mail=1.0-SNAPSHOT
+plugins.release=1.0.0.M2
 plugins.tomcat=1.3.5
