--- a/saie/.project
+++ b/saie/.project
@@ -59,6 +59,26 @@
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/burning-image-0.5.0/src/java</locationURI>
 		</link>
 		<link>
+			<name>famfamfam-1.0.1-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/famfamfam-1.0.1/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>greenmail-1.2.2-grails-app-controllers</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/greenmail-1.2.2/grails-app/controllers</locationURI>
+		</link>
+		<link>
+			<name>greenmail-1.2.2-grails-app-views</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/greenmail-1.2.2/grails-app/views</locationURI>
+		</link>
+		<link>
+			<name>greenmail-1.2.2-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/greenmail-1.2.2/src/groovy</locationURI>
+		</link>
+		<link>
 			<name>jasper-1.2.2-grails-app-controllers</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/jasper-1.2.2/grails-app/controllers</locationURI>
@@ -107,6 +127,71 @@
 			<name>log4j-xml-0.2-src-groovy</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-grails-app-views</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/grails-app/views</locationURI>
+		</link>
+		<link>
+			<name>mail-1.0-SNAPSHOT-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/mail-1.0-SNAPSHOT/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>release-1.0.0.RC3-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/release-1.0.0.RC3/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>release-1.0.0.RC3-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/release-1.0.0.RC3/src/java</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-i18n</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/i18n</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-services</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/services</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-taglib</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/taglib</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/java</locationURI>
 		</link>
 		<link>
 			<name>tomcat-1.3.5-src-groovy</name>
