--- a/saie/application.properties
+++ b/saie/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Mon Nov 14 12:42:00 ART 2011
+#Wed Nov 16 12:48:17 ART 2011
 app.grails.version=1.3.5
 app.name=saie
 app.servlet.version=2.4
@@ -8,7 +8,10 @@ plugins.burning-image=0.5.0
 plugins.famfamfam=1.0.1
 plugins.hibernate=1.3.5
 plugins.jasper=1.2.2
+plugins.jquery=1.6.1.1
+plugins.jquery-ui=1.8.15
 plugins.log4j-xml=0.2
 plugins.mail=1.0-SNAPSHOT
 plugins.spring-security-core=1.2.4
+plugins.spring-security-ui=0.1.2
 plugins.tomcat=1.3.5
