--- a/saie/.project
+++ b/saie/.project
@@ -109,6 +109,36 @@
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/log4j-xml-0.2/src/groovy</locationURI>
 		</link>
 		<link>
+			<name>spring-security-core-1.2.4-grails-app-conf</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/conf</location>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-i18n</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/i18n</location>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-services</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/services</location>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-grails-app-taglib</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/taglib</location>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-src-groovy</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/groovy</location>
+		</link>
+		<link>
+			<name>spring-security-core-1.2.4-src-java</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/src/java</location>
+		</link>
+		<link>
 			<name>tomcat-1.3.5-src-groovy</name>
 			<type>2</type>
 			<locationURI>GRAILS_ROOT/1.3.5/projects/saie/plugins/tomcat-1.3.5/src/groovy</locationURI>
