--- a/saie/application.properties
+++ b/saie/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Tue Nov 29 16:05:49 ART 2011
+#Mon Jan 16 16:23:18 ART 2012
 app.grails.version=1.3.5
 app.name=saie
 app.servlet.version=2.4
@@ -12,6 +12,7 @@ plugins.jquery=1.6.1.1
 plugins.jquery-ui=1.8.15
 plugins.log4j-xml=0.2
 plugins.mail=1.0-SNAPSHOT
+plugins.recaptcha=0.5.2
 plugins.spring-security-core=1.2.4
 plugins.spring-security-ui=0.1.2
 plugins.super-file-upload=0.4
