--- a/saie/.project
+++ b/saie/.project
@@ -214,6 +214,16 @@
 			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/recaptcha-0.5.2/src/groovy</location>
 		</link>
 		<link>
+			<name>release-1.0.0.RC3-src-groovy</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/release-1.0.0.RC3/src/groovy</location>
+		</link>
+		<link>
+			<name>release-1.0.0.RC3-src-java</name>
+			<type>2</type>
+			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/release-1.0.0.RC3/src/java</location>
+		</link>
+		<link>
 			<name>spring-security-core-1.2.4-grails-app-conf</name>
 			<type>2</type>
 			<location>C:/Users/Andrea/.grails/1.3.5/projects/saie/plugins/spring-security-core-1.2.4/grails-app/conf</location>
