--- a/saie/.settings/org.eclipse.core.resources.prefs
+++ b/saie/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
+#Fri Jun 22 18:26:25 GFT 2012
 eclipse.preferences.version=1
 encoding//.link_to_grails_plugins/burning-image-0.5.0/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/burning-image-0.5.0/grails-app/i18n/messages.properties=UTF-8
@@ -45,7 +46,6 @@ encoding//grails-app/i18n=UTF-8
 encoding//grails-app/i18n/messages.properties=UTF-8
 encoding//grails-app/i18n/messages_da.properties=UTF-8
 encoding//grails-app/i18n/messages_de.properties=UTF-8
-encoding//grails-app/i18n/messages_es.properties=UTF-8
 encoding//grails-app/i18n/messages_fr.properties=UTF-8
 encoding//grails-app/i18n/messages_it.properties=UTF-8
 encoding//grails-app/i18n/messages_ja.properties=UTF-8
@@ -55,3 +55,4 @@ encoding//grails-app/i18n/messages_pt_PT.properties=UTF-8
 encoding//grails-app/i18n/messages_ru.properties=UTF-8
 encoding//grails-app/i18n/messages_th.properties=UTF-8
 encoding//grails-app/i18n/messages_zh_CN.properties=UTF-8
+encoding/<project>=UTF-8
